--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <video src="images/74ac85ec4c2934afef7e6b995d21e8d8.mp4" loop autoplay="true" id="vid"></video>
+        <video src="images/74ac85ec4c2934afef7e6b995d21e8d8.mp4" loop autoplay muted id="vid"></video>
         <nav>
             <a href="#vid">
                 <div class="left">
