--- a/all projects/index.html
+++ b/all projects/index.html
@@ -27,7 +27,7 @@
         
         <div class="flex4">
             <p>To Do List</p>
-            <p><a target="_blank" href="todo list/version0-1/todo.html">Click here</a></p>
+            <p><a target="_blank" href="todo list//index.html">Click here</a></p>
         </div>
 
         <div class="flex5">
