--- a/all projects/index.html
+++ b/all projects/index.html
@@ -30,16 +30,16 @@
             <p><a target="_blank" href="todo list//index.html">Click here</a></p>
         </div>
 
-        <div class="flex5">
-            <p>More projects will be uploaded soon...</p>
-            <!-- <p>princekumar7827312066@gmail.com</p> -->
+                <div class="flex5">
+            <p>Tic Tac Toe Game</p>
+            <p><a target="_blank" href="tic tac toe/index.html">Click here</a></p>
         </div>
-<!-- 
-        <div class="flex6">
-            <p>Place</p>
-            <p>T-50 Krishna Colony Hastsal Rd. Uttam Nagar New Delhi-110059</p>
 
-        </div> -->
+        <div class="flex6">
+            <p>More projects will be uploaded soon</p>
+            <!-- <p>T-50 Krishna Colony Hastsal Rd. Uttam Nagar New Delhi-110059</p> -->
+
+        </div>
     </div>
     
 </body>
