--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="right">
                 <ul>
                     <li><a href="info/index.html"> < Info. ></a></li>
-                    <li><a href="prince_resume.pdf" target="_blank" download="prince_resume.pdf"> < RESUME ></a></li>
+                    <li><a href="#" target="_blank" download="prince_resume.pdf"> < RESUME ></a></li>
                     <!-- <a href="path-to-your-pdf-file.pdf" download="desired-filename.pdf"></a> -->
                 </ul>
             </div>
@@ -43,7 +43,7 @@
         </div>
         <section class="s1">
             <p>
-                < Hi... glad you're here! >
+                < Hi... glad you're here ! >
             </p>
             <p>
                 < I'm prince >
@@ -159,11 +159,102 @@
                 
             </div>
         </section>
-        <div class="more">
+        <div class="otherprojects">
+            <!-- moreprojects -->
+            <div class="cardscontainer">
+                <a class="cardanchor" href="all projects/todo list/index.html">
+                    <div class="card">
+                        <div class="imgcont">
+                            <img src="images/Screenshot 2025-01-27 184655.png" alt="img">
+                        </div>
+                        <div class="cardcont">to do list</div>
+                    </div>
+                </a>
+                <a class="cardanchor" href="all projects/tic tac toe/index.html">
+                    <div class="card">
+                        <div class="imgcont">
+                            <img src="images/Screenshot 2025-01-27 181539.png" alt="img">
+                        </div>
+                        <div class="cardcont">tic tac toe</div>
+                    </div>
+                </a>
+                <!-- <a class="cardanchor" href="">
+                    <div class="card">
+                        <div class="imgcont">
+                            <img src="images/Screenshot 2025-01-27 181539.png" alt="img">
+                        </div>
+                        <div class="cardcont">tic tac toe</div>
+                    </div>
+                </a>
+                <a class="cardanchor" href="">
+                    <div class="card">
+                        <div class="imgcont">
+                            <img src="images/Screenshot 2025-01-27 181539.png" alt="img">
+                        </div>
+                        <div class="cardcont">tic tac toe</div>
+                    </div>
+                </a>
+                <a class="cardanchor" href="">
+                    <div class="card">
+                        <div class="imgcont">
+                            <img src="images/Screenshot 2025-01-27 181539.png" alt="img">
+                        </div>
+                        <div class="cardcont">tic tac toe</div>
+                    </div>
+                </a>
+                <a class="cardanchor" href="">
+                    <div class="card">
+                        <div class="imgcont">
+                            <img src="images/Screenshot 2025-01-27 181539.png" alt="img">
+                        </div>
+                        <div class="cardcont">tic tac toe</div>
+                    </div>
+                </a>
+                <a class="cardanchor" href="">
+                    <div class="card">
+                        <div class="imgcont">
+                            <img src="images/Screenshot 2025-01-27 181539.png" alt="img">
+                        </div>
+                        <div class="cardcont">tic tac toe</div>
+                    </div>
+                </a> -->
+                <!-- <a class="cardanchor" href="">
+                    <div class="card">
+                        <div class="imgcont">
+                            <img src="images/Screenshot 2025-01-27 181539.png" alt="img">
+                        </div>
+                        <div class="cardcont">tic tac toe</div>
+                    </div>
+                </a> -->
+                <!-- <a class="cardanchor" href="">
+                    <div class="card">
+                        <div class="imgcont">
+                            <img src="images/Screenshot 2025-01-27 181539.png" alt="img">
+                        </div>
+                        <div class="cardcont">tic tac toe</div>
+                    </div>
+                </a> -->
+                <!-- <a href="">
+                    <div class="card"></div>
+                </a>
+                <a href="">
+                    <div class="card"></div>
+                </a>
+                <a href="">
+                    <div class="card"></div>
+                </a> -->
+                <!-- <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div> -->
+            </div>
+        </div>
+        <!-- <div class="more">
             <a href="all projects/index.html">
                 <button>All Projects >></button>
             </a>
-        </div>
+        </div> -->
     </main>
 
     <footer>
