--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <div class="otherprojects">
             <!-- moreprojects -->
             <div class="cardscontainer">
-                <a class="cardanchor" href="all projects/todo list/index.html">
+                <a target="_blank" class="cardanchor" href="all projects/todo list/index.html">
                     <div class="card">
                         <div class="imgcont">
                             <img src="images/Screenshot 2025-01-27 184655.png" alt="img">
@@ -170,7 +170,7 @@
                         <div class="cardcont">to do list</div>
                     </div>
                 </a>
-                <a class="cardanchor" href="all projects/tic tac toe/index.html">
+                <a target="_blank" class="cardanchor" href="all projects/tic tac toe/index.html">
                     <div class="card">
                         <div class="imgcont">
                             <img src="images/Screenshot 2025-01-27 181539.png" alt="img">
