--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="right">
                 <ul>
                     <li><a href="info/index.html"> < Info. ></a></li>
-                    <li><a href="#" target="_blank" download="prince_resume.pdf"> < RESUME ></a></li>
+                    <li><a href="prince_resume.pdf" target="_blank"> < RESUME ></a></li>
                     <!-- <a href="path-to-your-pdf-file.pdf" download="desired-filename.pdf"></a> -->
                 </ul>
             </div>
