--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
         </section>
         <a href="#secc1" class="arrow"><svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="#fffab9"><path d="M480-200 240-440l56-56 184 183 184-183 56 56-240 240Zm0-240L240-680l56-56 184 183 184-183 56 56-240 240Z"/></svg>
         </a>
-        <div class="pic-box">
+<!--         <div class="pic-box">
             <div class="me">
                 <img src="images/Screenshot_20240905-213805-removebg-preview3.png" alt="image">
             </div>
             
-        </div>
+        </div> -->
     </header>
     <div class="seperation"></div>
     <main>
