--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </section>
         <a href="#secc1" class="arrow"><svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="#fffab9"><path d="M480-200 240-440l56-56 184 183 184-183 56 56-240 240Zm0-240L240-680l56-56 184 183 184-183 56 56-240 240Z"/></svg>
         </a>
-<!--         <div class="pic-box">
+        <!-- <div class="pic-box">
             <div class="me">
                 <img src="images/Screenshot_20240905-213805-removebg-preview3.png" alt="image">
             </div>
@@ -113,7 +113,7 @@
 
         <section class="sec2" id="sec2">
             <div class="skills" id="skills">
-                <div class="flex-bar">
+                <div class="flex-bar" id="barr" onclick="bar()" onmouseout="bar2()">
                     <div class="color-bar1">My Skills >></div>
                 </div>
                 <!-- <p class="para"> -->
@@ -162,7 +162,7 @@
         <div class="otherprojects">
             <!-- moreprojects -->
             <div class="cardscontainer">
-                <a target="_blank" class="cardanchor" href="all projects/todo list/index.html">
+                <a class="cardanchor" href="all projects/todo list/index.html">
                     <div class="card">
                         <div class="imgcont">
                             <img src="images/Screenshot 2025-01-27 184655.png" alt="img">
@@ -170,7 +170,7 @@
                         <div class="cardcont">to do list</div>
                     </div>
                 </a>
-                <a target="_blank" class="cardanchor" href="all projects/tic tac toe/index.html">
+                <a class="cardanchor" href="all projects/tic tac toe/index.html">
                     <div class="card">
                         <div class="imgcont">
                             <img src="images/Screenshot 2025-01-27 181539.png" alt="img">
