--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <div class="otherprojects">
             <!-- moreprojects -->
             <div class="cardscontainer">
-                <a class="cardanchor" href="all projects/todo list/index.html">
+                <a class="cardanchor" target="_blank" href="all projects/todo list/index.html">
                     <div class="card">
                         <div class="imgcont">
                             <img src="images/Screenshot 2025-01-27 184655.png" alt="img">
@@ -170,12 +170,20 @@
                         <div class="cardcont">to do list</div>
                     </div>
                 </a>
-                <a class="cardanchor" href="all projects/tic tac toe/index.html">
+                <a class="cardanchor" target="_blank"  href="all projects/tic tac toe/index.html">
                     <div class="card">
                         <div class="imgcont">
                             <img src="images/Screenshot 2025-01-27 181539.png" alt="img">
                         </div>
                         <div class="cardcont">tic tac toe</div>
+                    </div>
+                </a>
+                <a class="cardanchor" target="_blank"  href="all projects/rock paper scissors/index.html">
+                    <div class="card">
+                        <div class="imgcont">
+                            <img src="images/Screenshot 2025-01-31 112755.png" alt="img">
+                        </div>
+                        <div class="cardcont">Rock Paper Scissors</div>
                     </div>
                 </a>
                 <!-- <a class="cardanchor" href="">
