--- a/all projects/rock paper scissors/index.html
+++ b/all projects/rock paper scissors/index.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
 
-            <div class="board">Increase your Score from 0 to 10 !</div>
+            <div class="board">Increase your Score from 0 to 10</div>
             <button class="btn">Reset</button>
         </div>
 
