--- a/info/index.html
+++ b/info/index.html
@@ -26,7 +26,7 @@
         
         <div class="flex4">
             <p>Job Role</p>
-            <p>Web Developer</p>
+            <p>Frontend Developer</p>
         </div>
 
         <div class="flex5">
