--- a/index.html
+++ b/index.html
@@ -228,6 +228,14 @@
                         <div class="cardcont">AI Capsule Extension</div>
                     </div>
                 </a>
+                <a class="cardanchor" target="_blank" href="https://princekumar7827.github.io/number-guessing-game/">
+                    <div class="card">
+                        <div class="imgcont">
+                            <img src="images/black-hand-painted-numbers_1095-151.jpg" alt="img">
+                        </div>
+                        <div class="cardcont">guess The Number</div>
+                    </div>
+                </a>
                 <a class="cardanchor" target="_blank" href="all projects/todo list/index.html">
                     <div class="card">
                         <div class="imgcont">
