--- a/index.html
+++ b/index.html
@@ -508,14 +508,14 @@
             <section class="textt m2sec">
                 <div class="textt-left-container m2secleft">
 
-                    <img loading="lazy" src="assets/images/Screenshot 2025-04-19 201920.png" alt="img">
+                    <img loading="lazy" src="assets/images/Screenshot 2025-06-10 233737.png" alt="img">
 
                   
                 </div>
                 <div class="textt-right-container m2secright">
-                    <h1>Tic-Tac-Toe</h1>
-                    <p class="texttp m2secp">This Tic Tac Toe game is built using HTML, CSS, and JavaScript. It features a clean design, responsive layout, and smart win/draw detection for smooth two-player gameplay on any device.</p>
-                    <a href="https://princekumar7827.github.io/tic-tac-toe/" target="_blank">
+                    <h1>Tic-Tac-Toe Multi-Mode</h1>
+                    <p class="texttp m2secp">A Tic Tac Toe game with advanced features — includes multi-mode functionality like 1P vs Computer and 2P modes, sound effects, and modular, encapsulated code written without AI assistance.</p>
+                    <a href="https://princekumar7827.github.io/tic-tac-toe-multi-mode/" target="_blank">
 
                         <button class="explore-textt m2secb">view Demo
                             <div class="texttoverlay m2seco"></div>
