--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="https://www.linkedin.com/in/prince-kumar-626b2033b/">LinkedIn</a></li>
                     <li><a href="https://github.com/PrinceKumar7827">GitHub</a></li>
                     <li><a href="https://x.com/skibidicode">X</a></li>
-                    <li><a href="mailto:princekumarwork7827@gmail.com">Email</a></li>
+                    <li><a href="mailto:dev.prince.kr@gmail.com">Email</a></li>
                     <li><a href="HTTPS://wa.me/917827312066">WhatsApp</a></li>
                     <li><a href="https://www.instagram.com/jsonguy/profilecard/?igsh=dmdoZ21vc3EyMDM1">Instgaram</a></li>
                 </ul>
@@ -50,7 +50,7 @@
                             <li><a href="https://www.linkedin.com/in/prince-kumar-626b2033b/">LinkedIn</a></li>
                             <li><a href="https://github.com/PrinceKumar7827">GitHub</a></li>
                             <li><a href="https://x.com/skibidicode">X</a></li>
-                            <li><a href="mailto:princekumarwork7827@gmail.com">Email</a></li>
+                            <li><a href="mailto:dev.prince.kr@gmail.com">Email</a></li>
                             <li><a href="HTTPS://wa.me/917827312066">WhatsApp</a></li>
                             <li><a href="https://www.instagram.com/jsonguy/profilecard/?igsh=dmdoZ21vc3EyMDM1">Instgaram</a></li>
                         </ul>
@@ -361,7 +361,7 @@
         </p>
 
         
-            <p class="main-para">"I come from a non coding background, had no mentor or guidance when I started. But I was so excited about it that I did deep research and began learning from scratch. It took time, but slowly I started to understand things and got more comfortable. Even without help, I kept learning on my own and built a strong understanding. What started as a random interest has now become a big part of my daily routine. I’ve come a long way, and I’m always eager to learn something new like a crazy curious person—I believe this learning attitude is what helped me get this far. I love exploring new tools and technologies in frontend development."</p>
+            <p class="main-para">"I come from a non coding background, had no mentor or guidance when i started. But i was so excited about it that i did research and began learning from scratch. Slowly i started to understand things and got more comfortable. Even without help, I kept learning on my own and built a strong understanding. What started as a random interest has now become a big part of my daily routine. I’m always eager to learn something new like a curious person—I believe this learning attitude is what helped me get this far. I love exploring new tools and technologies in frontend development."</p>
         
             <svg class="adha" width="155" height="124" viewBox="0 0 155 124" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true">
                 <path d="M114.577 16.7765C114.176 17.0039 114.012 17.4907 114.19 17.9137C123.826 41.3135 115.82 68.0885 94.5769 80.0841C73.3337 92.0796 46.239 85.1288 31.1434 64.8042C30.8702 64.4357 30.3648 64.322 29.9641 64.5494L0.464816 81.2031C0.00488856 81.4624 -0.140804 82.0629 0.150635 82.4996C25.729 120.911 74.9457 134.708 113.256 113.087C151.567 91.4655 165.096 42.2187 145.351 0.518573C145.123 0.0409342 144.536 -0.141026 144.076 0.118264L114.577 16.7719V16.7765Z" fill="url(#paint0_linear_2080_57114)"></path>
@@ -616,7 +616,7 @@
 
         </div>
         <div class="gmail">
-            <a href="mailto:princekumarwork7827@gmail.com" target="_blank">
+            <a href="mailto:dev.prince.kr@gmail.com" target="_blank">
 
             <svg class="gml" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0,0,256,256" width="50px" height="50px" fill-rule="nonzero"><g fill="#ff5d00" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.12,5.12)"><path d="M5.5,7c-2.46875,0 -4.48828,2.01563 -4.5,4.48438c0,0 0,0.00391 0,0.00781c0,0.00391 0,0.00391 0,0.00781v27c0,2.47266 2.02734,4.5 4.5,4.5h39c2.47266,0 4.5,-2.02734 4.5,-4.5v-27c0,-0.00391 0,-0.00391 0,-0.00781c0,-0.00391 0,-0.00781 0,-0.00781c-0.01172,-2.46875 -2.03125,-4.48437 -4.5,-4.48437zM8.10156,9h33.80078l-16.90234,11.78125zM4.77344,9.11719l20.22656,14.10156l20.23047,-14.10156c1.02344,0.30859 1.76172,1.23828 1.76953,2.37109c-0.00391,0.21094 -0.21875,0.63281 -0.53125,0.97266c-0.31641,0.34375 -0.625,0.55859 -0.625,0.55859l-0.00391,0.00781l-20.83984,14.75l-20.83984,-14.75l-0.00391,-0.00781c0,0 -0.30859,-0.21484 -0.625,-0.55859c-0.3125,-0.33984 -0.52734,-0.76172 -0.53125,-0.97266c0.00781,-1.13281 0.74609,-2.0625 1.77344,-2.37109zM3,14.65234l0.00781,0.00781l0.00781,0.00391v0.00391l2.98438,2.10938v24.22266h-0.5c-1.39062,0 -2.5,-1.10937 -2.5,-2.5zM47,14.65234v23.84766c0,1.39063 -1.10937,2.5 -2.5,2.5h-0.5v-24.22266l2.98438,-2.10937v-0.00391zM8,18.19141l17,12.03125l17,-12.03125v22.80859h-34z"></path></g></g></svg>
 
