--- a/index.html
+++ b/index.html
@@ -649,9 +649,9 @@
             </a>
         </div>
        </div>
-       <div class="hand">
+       <!-- <div class="hand">
         <img src="assets/images/WhatsApp_Image_2024-09-13_at_10.39.04_AM-removebg-preview.png" alt="img">
-    </div>
+    </div> -->
     </footer>
 
 
