--- a/info/index.html
+++ b/info/index.html
@@ -16,7 +16,7 @@
 
         <div class="flex2">
             <p>Age</p>
-            <p>20+</p>
+            <p>21+</p>
         </div>
 
         <div class="flex3">
@@ -31,7 +31,7 @@
 
         <div class="flex5">
             <p>Email</p>
-            <p>princekumar7827312066@gmail.com</p>
+            <p>dev.prince.kr@gmail.com</p>
         </div>
 
         <div class="flex6">
