--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li><a href="https://x.com/skibidicode">X</a></li>
                     <li><a href="mailto:dev.prince.kr@gmail.com">Email</a></li>
                     <li><a href="HTTPS://wa.me/917827312066">WhatsApp</a></li>
-                    <li><a href="https://www.instagram.com/jsonguy/profilecard/?igsh=dmdoZ21vc3EyMDM1">Instgaram</a></li>
+                    <li><a href="https://www.instagram.com/jsonguy/profilecard/?igsh=dmdoZ21vc3EyMDM1">Instagram</a></li>
                 </ul>
             </div>
         </div>
